// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input computed usecase-0__disabled-false cssStates 1`] = `
Object {
  "autogrow": false,
  "dark": true,
  "disabled": false,
  "error": false,
  "focused": false,
  "overlay-close": false,
  "overlay-open": false,
  "valid": false,
  "warning": false,
}
`;

exports[`Input computed usecase-0__disabled-false currentLength 1`] = `0`;

exports[`Input computed usecase-0__disabled-false decimalSeperator 1`] = `"."`;

exports[`Input computed usecase-0__disabled-false inputType 1`] = `"text"`;

exports[`Input computed usecase-0__disabled-false mappedDisabledText 1`] = `""`;

exports[`Input computed usecase-0__disabled-false mappedHelperText 1`] = `""`;

exports[`Input computed usecase-0__disabled-false mappedLabelText 1`] = `""`;

exports[`Input computed usecase-0__disabled-false mappedPlaceholderText 1`] = `"Something"`;

exports[`Input computed usecase-0__disabled-false maxLengthCap 1`] = `null`;

exports[`Input computed usecase-0__disabled-false maxLengthNumber 1`] = `null`;

exports[`Input computed usecase-0__disabled-false states 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "valid": false,
  "warning": false,
}
`;

exports[`Input computed usecase-0__disabled-false textareaClasses 1`] = `
Array [
  Object {
    "input-row__placeholder-text--autogrow": false,
    "input-row__placeholder-text--dark": true,
    "input-row__placeholder-text--disabled": false,
    "input-row__placeholder-text--error": false,
    "input-row__placeholder-text--focused": false,
    "input-row__placeholder-text--overlay-close": false,
    "input-row__placeholder-text--overlay-open": false,
    "input-row__placeholder-text--valid": false,
    "input-row__placeholder-text--warning": false,
  },
  Object {
    "input-row__textarea--overflow": false,
  },
]
`;

exports[`Input computed usecase-0__disabled-true cssStates 1`] = `
Object {
  "autogrow": false,
  "dark": true,
  "disabled": true,
  "error": false,
  "focused": false,
  "overlay-close": false,
  "overlay-open": false,
  "valid": false,
  "warning": false,
}
`;

exports[`Input computed usecase-0__disabled-true currentLength 1`] = `0`;

exports[`Input computed usecase-0__disabled-true decimalSeperator 1`] = `"."`;

exports[`Input computed usecase-0__disabled-true inputType 1`] = `"text"`;

exports[`Input computed usecase-0__disabled-true mappedDisabledText 1`] = `""`;

exports[`Input computed usecase-0__disabled-true mappedHelperText 1`] = `""`;

exports[`Input computed usecase-0__disabled-true mappedLabelText 1`] = `""`;

exports[`Input computed usecase-0__disabled-true mappedPlaceholderText 1`] = `"Something"`;

exports[`Input computed usecase-0__disabled-true maxLengthCap 1`] = `null`;

exports[`Input computed usecase-0__disabled-true maxLengthNumber 1`] = `null`;

exports[`Input computed usecase-0__disabled-true states 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "valid": false,
  "warning": false,
}
`;

exports[`Input computed usecase-0__disabled-true textareaClasses 1`] = `
Array [
  Object {
    "input-row__placeholder-text--autogrow": false,
    "input-row__placeholder-text--dark": true,
    "input-row__placeholder-text--disabled": true,
    "input-row__placeholder-text--error": false,
    "input-row__placeholder-text--focused": false,
    "input-row__placeholder-text--overlay-close": false,
    "input-row__placeholder-text--overlay-open": false,
    "input-row__placeholder-text--valid": false,
    "input-row__placeholder-text--warning": false,
  },
  Object {
    "input-row__textarea--overflow": false,
  },
]
`;
